objects/ASI_HK_CRM_Product_Category__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_CN_Bottle_Collection_Rate__c</fullName>
        <label>Bottle Collection Rate</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Chinese_Name__c</fullName>
        <label>Chinese Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_For_PAF__c</fullName>
        <defaultValue>false</defaultValue>
        <label>For PAF</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_JDE_Category_Code__c</fullName>
        <label>JDE Category Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_JDE_Category_English_Name__c</fullName>
        <label>JDE Category English Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_JDE_Category__c</fullName>
        <formula>ASI_CRM_JDE_Category_Code__c + &apos; &apos; + ASI_CRM_JDE_Category_English_Name__c</formula>
        <label>JDE Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_LocalName__c</fullName>
        <label>Product Category Name (Local)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Report__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Report</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Contributive_Margin__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Contributive Margin Index</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Wine_Spirits__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Wine/Spirits</label>
        <referenceTo>ASI_CRM_Wine_Spirits__c</referenceTo>
        <relationshipLabel>Product Categories</relationshipLabel>
        <relationshipName>Product_Categories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_Category_Code__c</fullName>
        <label>Category Code</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_English_Name__c</fullName>
        <label>English Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_Product_Category__c</fullName>
        <externalId>true</externalId>
        <label>Product Category</label>
        <length>8</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_Sequence__c</fullName>
        <label>Sequence</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Product Category</label>
    <listViews>
        <fullName>ASI_CRM_CN_Categories</fullName>
        <columns>NAME</columns>
        <columns>ASI_HK_CRM_Category_Code__c</columns>
        <columns>ASI_HK_CRM_English_Name__c</columns>
        <columns>ASI_CRM_CN_Chinese_Name__c</columns>
        <columns>ASI_HK_CRM_Sequence__c</columns>
        <columns>ASI_HK_CRM_Product_Category__c</columns>
        <columns>ASI_CRM_JDE_Category__c</columns>
        <columns>ASI_CRM_JDE_Category_Code__c</columns>
        <columns>ASI_CRM_JDE_Category_English_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_HK_CRM_Product_Category__c.ASI_CRM_CN_Product_Category</value>
        </filters>
        <label>CN Product Categories</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>ASI_CN</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_CRM_HK_Product_Categories</fullName>
        <columns>NAME</columns>
        <columns>ASI_HK_CRM_Category_Code__c</columns>
        <columns>ASI_HK_CRM_English_Name__c</columns>
        <columns>ASI_CRM_CN_Chinese_Name__c</columns>
        <columns>ASI_HK_CRM_Sequence__c</columns>
        <columns>ASI_HK_CRM_Product_Category__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
        </filters>
        <label>HK Product Categories</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>ASI_HK_CRM</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_CRM_TW_ProductCategories</fullName>
        <columns>ASI_HK_CRM_Sequence__c</columns>
        <columns>ASI_HK_CRM_Category_Code__c</columns>
        <columns>ASI_HK_CRM_Product_Category__c</columns>
        <columns>NAME</columns>
        <columns>ASI_HK_CRM_English_Name__c</columns>
        <columns>ASI_CRM_CN_Chinese_Name__c</columns>
        <columns>ASI_CRM_For_PAF__c</columns>
        <columns>ASI_CRM_Report__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_HK_CRM_Product_Category__c.ASI_CRM_TW_Product_Category</value>
        </filters>
        <label>TW Product Categories</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_CRM_TW_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_MY_CRM_Categories</fullName>
        <columns>NAME</columns>
        <columns>ASI_HK_CRM_Category_Code__c</columns>
        <columns>ASI_HK_CRM_English_Name__c</columns>
        <columns>ASI_HK_CRM_Sequence__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_HK_CRM_Product_Category__c.ASI_MY_CRM_Product_Category</value>
        </filters>
        <label>All MY CRM Categories</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_CRM_MY_PowerUser</group>
            <group>ASI_CRM_MY_StandardUser</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_PRK</fullName>
        <columns>NAME</columns>
        <columns>ASI_HK_CRM_Category_Code__c</columns>
        <columns>ASI_HK_CRM_English_Name__c</columns>
        <columns>ASI_HK_CRM_Sequence__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ASI_HK_CRM_Product_Category__c</field>
            <operation>contains</operation>
            <value>PRK</value>
        </filters>
        <label>All PRK</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>ASI_KOR</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_PRTH</fullName>
        <columns>NAME</columns>
        <columns>ASI_HK_CRM_Category_Code__c</columns>
        <columns>ASI_HK_CRM_English_Name__c</columns>
        <columns>ASI_HK_CRM_Sequence__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_HK_CRM_Product_Category__c.ASI_TH_CRM_Product_Category</value>
        </filters>
        <label>All PRTH</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>ASI_KOR</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_SG_CRM_Categories</fullName>
        <columns>NAME</columns>
        <columns>ASI_HK_CRM_Category_Code__c</columns>
        <columns>ASI_HK_CRM_English_Name__c</columns>
        <columns>ASI_HK_CRM_Sequence__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_HK_CRM_Product_Category__c.ASI_SG_CRM_Product_Category</value>
        </filters>
        <label>All SG CRM Categories</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_CRM_MY_PowerUser</group>
            <group>ASI_CRM_MY_StandardUser</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_VN_Product_Categories</fullName>
        <columns>NAME</columns>
        <columns>ASI_HK_CRM_Category_Code__c</columns>
        <columns>ASI_HK_CRM_Product_Category__c</columns>
        <columns>ASI_HK_CRM_Sequence__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_HK_CRM_Product_Category__c.ASI_CRM_VN_ProductCategory</value>
        </filters>
        <label>All VN Product Categories</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_CRM_VN_all_User</group>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Product Category Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Categories</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_CN_Product_Category</fullName>
        <active>true</active>
        <label>CN Product Category</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_TW_Product_Category</fullName>
        <active>true</active>
        <description>This is used by TW CRM</description>
        <label>TW Product Category</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_VN_ProductCategory</fullName>
        <active>true</active>
        <label>VN Product Category</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_KOR_Product_Category</fullName>
        <active>true</active>
        <label>ASI KOR Product Category</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_MY_CRM_Product_Category</fullName>
        <active>true</active>
        <label>ASI MY CRM Product Category</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_SG_CRM_Product_Category</fullName>
        <active>true</active>
        <label>ASI SG CRM Product Category</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_TH_CRM_Product_Category</fullName>
        <active>true</active>
        <label>ASI TH CRM Product Category</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
</CustomObject>